2006-10-26  Thomas Vander Stichele  <thomas at apestaart dot org>

	* build.xml:
	  make sure building the player depends on distinfo target
	* src/com/fluendo/player/CortadoPipeline.java:
	(CortadoPipeline.build):
	  add a space

2006-10-26  Thomas Vander Stichele  <thomas at apestaart dot org>

	* build.xml:
	  separate dist-time variables in to separate class, since it
	  should be decided at dist time and not build time
	* scripts/get-branch:
	* scripts/get-revision:
	  make scripts work in the absence of .svn dirs, returning (unknown)
	* src/com/fluendo/player/Cortado.java:
	(Cortado.AboutFrame.AboutFrame):
	* src/com/fluendo/player/CortadoPipeline.java:
	(CortadoPipeline.build):
	  Try to get the User-Agent to include http.agent if available

2006-10-26  Thomas Vander Stichele  <thomas at apestaart dot org>

	* build.xml:
	* scripts/get-branch:
	* scripts/get-revision:
	  two scripts to help identify branch and revision/modification
	* src/com/fluendo/player/Cortado.java:
	(Cortado.AboutFrame.AboutFrame):
	* src/com/fluendo/player/CortadoPipeline.java: (CortadoPipeline),
	(CortadoPipeline.build):
	* src/com/fluendo/plugin/HTTPSrc.java: (HTTPSrc),
	(HTTPSrc.openWithConnection), (HTTPSrc.setProperty):
	  set User-Agent string so that we identify ourselves with
	  version of cortado, version of Java VM, and os name

2006-10-25  Wim Taymans  <wim@fluendo.com>

	* src/com/fluendo/player/Cortado.java: (Cortado..init):
	Disable seeking for MS JVM.

2006-10-25  Wim Taymans  <wim@fluendo.com>

	* src/com/fluendo/plugin/VideoSink.java: (VideoSink.setCapsFunc):
	Add comment.

2006-10-25  Wim Taymans  <wim@fluendo.com>

	* src/com/fluendo/plugin/VideoSink.java: (VideoSink.setCapsFunc):
	Don't mess with the component size, the parent does that for us.

2006-10-25  Wim Taymans  <wim@fluendo.com>

	* src/com/fluendo/jst/Pipeline.java: (Pipeline.reCalcState):
	release lock when continuing the state change.

2006-10-25  Wim Taymans  <wim@fluendo.com>
